--- a/css/styles.css
+++ b/css/styles.css
@@ -62,17 +62,29 @@ li {
 }
 
 li button {
-    background-color: #dc3545;
     border: none;
     padding: 5px 10px;
     color: white;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    margin-left: 5px; /* Espaçamento entre os botões */
 }
 
-li button:hover {
-    background-color: #c82333;
+li button.editar {
+    background-color: #007bff; /* Azul para o botão de edição */
+}
+
+li button.editar:hover {
+    background-color: #0056b3; /* Azul mais escuro no hover */
+}
+
+li button.deletar {
+    background-color: #dc3545; /* Vermelho para o botão de deletar */
+}
+
+li button.deletar:hover {
+    background-color: #c82333; /* Vermelho mais escuro no hover */
 }
 
 #mensagemFeedback {
@@ -105,5 +117,15 @@ li button:hover {
 
     input, button {
         font-size: 14px;
+    }
+
+    li {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    li button {
+        margin-top: 5px;
+        width: 100%;
     }
 }
